gccida/c1/expand_builtin_setjmp
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_setjmp/src/builtins.c:1061:21: error: use of undeclared identifier 'machine_mode'
v2 = gen_reg_rtx( ( machine_mode)( ( unsigned __int8)HIBYTE( WORD2( integer_types[5]->block.abstract_origin)) >> 1)); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/expand_builtin_setjmp/src/obj/builtins.o] Error 1
